--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
 </head>
 
 <body>
-  <h1>
-    Language Suggester
-  </h1>
+  <h1>Language Suggester</h1>
 
-  <h2>
-    Hey there developer, wanna learn to code but don't know where to start? Take this quiz to see whice language is
-    right
-    for you!
-  </h2>
+  <h2>Hey there developer, wanna learn to code but don't know where to start?</h2>
+  <h2>Take this quiz to see whice language is right for you!</h2>
 
   <form id="quiz">
     <h3>Let's start with the name. Type your name below.</h3>
