--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       <option value="3">Expert (4+ years)</option>
     </select>
 
+    <p><strong>Pick a random number between 1 and 10</strong></p>
+    <label for="numberInput"></label>
+    <input id="numberInput" type="text" name="numberInput">
+
     <h3>If you had to pick a place to visit, where would you go?</h3>
     <input type="radio" name="location" value="france">
     Paris, france
