--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <p>After deliberation, I recommend:
       <p id="output1a"></strong></p>
       <p>So go try out <span id="output1b"></span> for <span id="time"></span> day(s)!</p>
+      <p>Learn more about <span id="languageLink"></span> on <a id="wikiLink" href="" target="_blank">Wikipedia</a></p>
     </div>
   </form>
 </body>
