add random quotes at the end of the result

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <p id="output1a"></strong></p>
       <p>So go try out <span id="output1b"></span> for <span id="time"></span> day(s)!</p>
       <p>Learn more about <span id="languageLink"></span> on <a id="wikiLink" href="" target="_blank">Wikipedia</a></p>
+      <div id="quote"></div>
     </div>
   </form>
 </body>
